tests/baselines/reference/moduleNoneErrors(target=es5).errors.txt
error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(1,14): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
a.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (2 errors) ====
    export class Foo {
                 ~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    